--- a/Datra.Unity/Editor/Styles/DatraTableView.uss
+++ b/Datra.Unity/Editor/Styles/DatraTableView.uss
@@ -91,10 +91,23 @@
 
 .table-resize-handle {
     cursor: resize-horizontal;
+    background-color: transparent;
+    transition: background-color 0.1s ease;
+    z-index: 10;
 }
 
 .table-resize-handle:hover {
-    background-color: #5a9fd4;
+    background-color: rgba(90, 159, 212, 0.5);
+}
+
+.resize-handle-left {
+    border-left-width: 1px;
+    border-left-color: transparent;
+}
+
+.resize-handle-right {
+    border-right-width: 1px;
+    border-right-color: transparent;
 }
 
 /* Table Content */
